# struck-ocr

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
docs/: architecture.md  database-design.md  ocr-pipeline.md  operations.md  performance.md  receipt-parsing-strategy.md  receipt-parsing.md  security.md
docs/api/: openapi.yaml  postman_collection.json
docs/decisions/: adr-0001-monorepo.md
docs/runbook/: local-dev.md  production.md
infra/docker/: go-api.Dockerfile  ocr-service.Dockerfile
infra/nginx/: nginx.conf
scripts/: dev.sh  lint.sh  migrate.sh  test.sh
services/go-api/: README.md  go.mod  go.sum
services/go-api/cmd/api/: main.go
services/go-api/config/: config.go  config.yaml
services/go-api/database/postgres/: db.go  tx.go
services/go-api/internal/app/bootstrap/: container.go  wiring.go
services/go-api/internal/app/server/: http_server.go  (+1 more)
services/ocr-service/: README.md  pyproject.toml
services/ocr-service/app/: main.py  server.py
services/ocr-service/config/: settings.py
services/ocr-service/infrastructure/http_client/: go_api.py
services/ocr-service/infrastructure/storage/: local.py
services/ocr-service/ocr_engine/: paddle.py  tesseract.py
services/ocr-service/preprocessing/: binarize.py  denoise.py  normalize.py
services/ocr-service/routers/: ocr.py
services/ocr-service/schemas/: request.py  response.py
services/ocr-service/services/: ocr_service.py  parsing_service.py
services/ocr-service/storage/output/: general_ocr_002.json
shared/configs/: logging.yaml
shared/docs/: glossary.md
(+31 files in other folders)
